--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 SITE_NAME_HEADER=Digital Garden
-SITE_BASE_URL=
+SITE_BASE_URL=land-of-knowledge-3ckviwf21-aiartlab127-gmailcom.vercel.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
