--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-
+THEME=https://raw.githubusercontent.com/bennyxguo/Obsidian-Obsidianite/HEAD/theme.css
+BASE_THEME=dark
 SITE_NAME_HEADER=Digital Garden
-SITE_BASE_URL=land-of-knowledge-3ckviwf21-aiartlab127-gmailcom.vercel.app
+SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
